--- a/account/login.html
+++ b/account/login.html
@@ -7,6 +7,13 @@
       name="description"
       content="Log in to manage and publish posts on the Innova tech blog."
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Innova | Log in</title>
   </head>
   <body>
