--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar">
+      <nav class="navbar container">
         <!-- logo -->
         <a href="index.html">
           <img
