Add favicon to head

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
       name="description"
       content="Stories about products, systems, and emerging tech"
     />
+    <link
+      rel="shortcut icon"
+      href="../assets/graphics/innova-logomark.svg"
+      type="image/svg+xml"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
