--- a/account/login.html
+++ b/account/login.html
@@ -7,6 +7,11 @@
       name="description"
       content="Log in to manage and publish posts on the Innova tech blog."
     />
+    <link
+      rel="shortcut icon"
+      href="../assets/graphics/innova-logomark.svg"
+      type="image/svg+xml"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
