--- a/account/register.html
+++ b/account/register.html
@@ -7,6 +7,11 @@
       name="description"
       content="Create an account to publish and manage blog posts on Innova."
     />
+    <link
+      rel="shortcut icon"
+      href="../assets/graphics/innova-logomark.svg"
+      type="image/svg+xml"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
