apply base CSS across all pages

--- a/account/login.html
+++ b/account/login.html
@@ -95,6 +95,40 @@
         </div>
       </nav>
     </header>
+    <main>
+      <article class="container">
+        <form class="wrapper">
+          <h1 class="title-medium">Log in</h1>
+          <!-- title -->
+          <label for="email">E-mail</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="you@example.com"
+          />
+
+          <!-- tag(s) -->
+          <label for="password">Password</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            placeholder="Create a password"
+          />
+
+          <!-- Button -->
+          <button class="btn" id="login-btn" type="submit">Log in</button>
+
+          <!-- Auth switch text -->
+          <div class="auth__switch">
+            <p>
+              No account? <a href="/account/register.html"><b>Register</b></a>
+            </p>
+          </div>
+        </form>
+      </article>
+    </main>
     <footer>
       <div class="container container__footer">
         <div class="footer__signup">
