--- a/account/register.html
+++ b/account/register.html
@@ -24,10 +24,10 @@
   <body>
     <header>
       <nav class="navbar container">
-        <a href="index.html">
+        <a href="/index.html">
           <img
             class="logo"
-            src="./assets/graphics/innova-wordmark.svg"
+            src="../assets/graphics/innova-wordmark.svg"
             data-dark="./assets/graphics/innova-wordmark.svg"
             data-light="./assets/graphics/innova-wordmark-white.svg"
             alt="Innova logo wordmark"
@@ -40,14 +40,14 @@
           </li>
 
           <li class="nav-item" data-auth="guest">
-            <a href="#" class="nav-link">About</a>
+            <a href="/index.html#about" class="nav-link">About</a>
           </li>
 
           <li class="nav-item" data-auth="guest">
-            <a href="./account/login.html" class="nav-link nav-link--login">
+            <a href="./login.html" class="nav-link nav-link--login">
               <span class="login-text">Log in</span>
               <span class="login-icon" aria-hidden="true">
-                <img src="./assets/graphics/log-in-icon.svg" alt="" />
+                <img src="../assets/graphics/log-in-icon.svg" alt="" />
               </span>
             </a>
           </li>
@@ -56,7 +56,7 @@
             <a href="./account/create.html" class="nav-link nav-link--create">
               <span class="create-text">Create post</span>
               <span class="create-icon" aria-hidden="true">
-                <img src="./assets/graphics/edit-icon.svg" alt="" />
+                <img src="../assets/graphics/edit-icon.svg" alt="" />
               </span>
             </a>
           </li>
@@ -65,7 +65,7 @@
             <a href="#" class="nav-link nav-link--logout">
               <span class="logout-text">Log out</span>
               <span class="logout-icon" aria-hidden="true">
-                <img src="./assets/graphics/log-out-icon.svg" alt="" />
+                <img src="../assets/graphics/log-out-icon.svg" alt="" />
               </span>
             </a>
           </li>
@@ -77,7 +77,7 @@
               </p>
 
               <img
-                src="./assets/graphics/arrow-down-icon-white.svg"
+                src="../assets/graphics/arrow-down-icon-white.svg"
                 alt="arrow down icon"
               />
 
@@ -95,6 +95,41 @@
         </div>
       </nav>
     </header>
+    <main>
+      <article class="container">
+        <form class="wrapper">
+          <h1 class="title-medium">Register</h1>
+          <!-- title -->
+          <label for="email">E-mail</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="you@example.com"
+          />
+
+          <!-- tag(s) -->
+          <label for="password">Password</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            placeholder="Create a password"
+          />
+
+          <!-- Button -->
+          <button class="btn" id="login-btn" type="submit">Log in</button>
+
+          <!-- Auth switch text -->
+          <div class="auth__switch">
+            <p>
+              Already have an account?
+              <a href="/account/login.html"><b>Log in</b></a>
+            </p>
+          </div>
+        </form>
+      </article>
+    </main>
     <footer>
       <div class="container container__footer">
         <div class="footer__signup">
@@ -117,7 +152,7 @@
         <div class="footer__nav">
           <a href="#top">
             <img
-              src="./assets/graphics/arrow-up-icon-white.svg"
+              src="../assets/graphics/arrow-up-icon-white.svg"
               alt="arrow up icon"
           /></a>
           <p>Back to to top</p>
